@@ -2,6 +2,7 @@
     - Allow control of cascaded_delete (Sartak)
     - Allow control over current_user_can on Change and ChangeField by
       implementing current_user_can_for_change in your record class (Sartak)
+    - Provide a way to create a delete_change for record delete (Sartak)
 
 0.03  2011-02-17
     - Provide a brief description of the object being viewed in the page title (trs)
